# FitAO

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
FitAO/: env_var.sh  gym_test.py  multigym_test.py  rl_test.py  test_install.py  tool_test.py  util.py
FitAO/CompassEnv/: CompassEnv.py
FitAO/Conf/: mbrl_40_dippa.py  pyrhr_16x16.py  sh_16x8.py  sh_16x8.toml  sh_16x8.yaml  sh_16x8_lgs.py
FitAO/OOMAOEnv/: OOMAOEnv.py  PyOOMAO.py  env.m  env.m~  getNewAtmSeed.m~
FitAO/SoapyEnv/: SoapyEnv.py  simulation.py  wfs.py
FitAO/Tools/: ParamParser.py  control.py  mat.py  parameter_parser.py  rl_gain.py  simulation_parameters.py
