[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "FitAO"
version = "0.0.1"
description = "FitAO is a unified Python interface for multiple AO simulators."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

# TODO: Add dependencies and authors

[project.urls]
"Homepage" = "https://github.com/jnousi/FitAO"
"Bug Tracker" = "https://github.com/jnousi/FitAO/issues"

[tool.setuptools.packages.find]
where = "FitAO"