[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "FitAO"
version = "0.0.1"
description = "FitAO is a unified Python interface for multiple AO simulators."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
# TODO: Missing authors
# We may need to add version requirements
dependencies = [
    "gym", # OpenAI Gym, a standard API for reinforcement learning, will likely become optional in the future
    "matplotlib",
    "numpy",
    "scikit-image",  # TODO: Currently only used by CompassEnv, maybe unnecessary
    "tqdm",  # Light-weight progress bar for lengthy computations
    "pydantic"  # Robust data validation tool for checking user-provided parameter files
]
[optional-dependencies]
tests = [  # Any dependencies for tests will go here
]

[project.urls]
"Homepage" = "https://github.com/jnousi/FitAO"
"Bug Tracker" = "https://github.com/jnousi/FitAO/issues"